# SistemasOperativos

./: CMakeLists.txt  NotFound.html  SoldOut.html  cine.json  prueba2.html  ticket.html  ticket2.html
include/: cine.h  router.h
src/: cine.cpp  html_server.cpp  html_server.h  main.cpp  router.cpp
